2010-01-30  vadim  <vadim@vk.crocodile.org>

	* change in libfwbuilder. fixes #1173 "rule ID labels do not match
	rule numbers when disabled rules exist in rule set". Do not remove
	disabled rules in PolicyCompiler::prolog() because some compilers
	might use RuleSet::insertRuleAtTop() and other similar methods
	from prolog() or addPredefinedPolicyRules() and these methods
	renumber rules. As the result, labels stop matching rule positions
	when this is done because labels are configured in prolog() method
	of the base class. See fwbuilder ticket 1173. Instead of dropping
	disabled rules in prolog(), will keep them and drop them in rule
	processor Begin which is always the first in all compilers.

	* PolicyCompiler_ipt.cpp (checkInterfaceAgainstAddressFamily::processNext):
	fixes #1172 "fwb_ipt does not generate rule for cluster interface
	with no ip address".

	* OSConfigurator_linux24.cpp (OSConfigurator_linux24::processFirewallOptions):
	fixes #1177 "problems with commands for conntrack_max, hashsize
	and other advanced conntrack parameters". Needed to add a line
	break between shell commands that set up kernel variables and
	those that set up conntrack kernel variables.

	* FWWindow.cpp (FWWindow::showSub): fixes #1181 "save state of
	subwindow on maximize/restore". The GUI would revert to the
	non-maximized subwindows display if user de-maximized subwindow,
	then maximized it again and tried to open new data file.

	* ProjectPanel_file_ops.cpp (ProjectPanel::fileNew): fixes #1178
	window title stays "[Untitled]" after File/new

2010-01-30  yalovoy <yalovoy@gmail.com>

	* fixes #1159 GUI crash on redo() :
	FWCmdChange.cpp
	FWCmdChange.h

	* fixes #1121 changing "rules font" in global preferences has no effect
	PrefsDialog.cpp
	RuleSetModel.cpp
	RuleSetViewDelegate.cpp

2010-01-30  vadim  <vadim@vk.crocodile.org>

	* ../src/res/os/linux24.xml: fixes #1180 "heartbeat failover
	protocol uses virtual ip address". New cluster wizard did not